add auth to Jewelry store API
