# backend/routes/jewelry.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-
+const authenticate = require('../middleware/auth');
 const jewelryController = require('../controllers/jewelry');
 
 // GET all jewelry
@@ -9,13 +9,13 @@ router.get('/', jewelryController.getAll);
 // GET jewelry by id
 router.get('/:id', jewelryController.getSingle);
 
-// CREATE new jewelry
-router.post('/', jewelryController.createItem);
+// CREATE new jewelry, protected route
+router.post('/', authenticate, jewelryController.createItem);
 
-// UPDATE jewelry by id
-router.put('/:id', jewelryController.updateItem);
+// UPDATE jewelry by id, protected route
+router.put('/:id', authenticate, jewelryController.updateItem);
 
-// DELETE jewelry by id
-router.delete('/:id', jewelryController.deleteItem);
+// DELETE jewelry by id, protected route
+router.delete('/:id', authenticate, jewelryController.deleteItem);
 
 module.exports = router;
